--- a/app/src/main/res/layout/activity_delivery_info.xml
+++ b/app/src/main/res/layout/activity_delivery_info.xml
@@ -10,7 +10,7 @@
         android:id="@+id/et_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Enter Your Name"
+        android:hint="Enter Your Full Name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
