--- a/app/src/main/res/layout/fragment_me_seller.xml
+++ b/app/src/main/res/layout/fragment_me_seller.xml
@@ -30,7 +30,6 @@
                     app:srcCompat="@drawable/me"
                     tools:ignore="MissingConstraints" />
 
-
                 <Button
                     android:id="@+id/uploadButton"
                     android:layout_width="wrap_content"
@@ -98,6 +97,21 @@
                         android:drawablePadding="20dp"
                         android:paddingStart="20dp"
                         android:drawableStart="@drawable/inventory"/>
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/manageOrderButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="55dp"
+                        android:text="Manage Orders"
+                        android:textAlignment="viewStart"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginEnd="32dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/profile_btn"
+                        android:layout_marginBottom="10dp"
+                        android:drawablePadding="20dp"
+                        android:paddingStart="20dp"
+                        android:drawableStart="@drawable/ic_launcher_background"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/settingbutton"
