--- a/app/src/main/res/layout/item_purchased.xml
+++ b/app/src/main/res/layout/item_purchased.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/iv_product_image"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:scaleType="centerCrop"
         android:contentDescription="Product Image"
         android:layout_marginEnd="8dp"/>
@@ -38,5 +38,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"/>
+
+        <TextView
+            android:id="@+id/tv_order_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textStyle="italic"
+            android:textColor="@android:color/darker_gray"/>
     </LinearLayout>
 </LinearLayout>
