--- a/app/src/main/res/layout/activity_manage_order.xml
+++ b/app/src/main/res/layout/activity_manage_order.xml
@@ -13,6 +13,12 @@
         android:textSize="24sp"
         android:textStyle="bold"/>
 
+    <!-- Spinner Dropdown -->
+    <Spinner
+        android:id="@+id/spinner_order_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_orders"
         android:layout_width="match_parent"
