--- a/app/src/main/res/layout/fragment_home_seller.xml
+++ b/app/src/main/res/layout/fragment_home_seller.xml
@@ -2,236 +2,195 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    tools:context=".HomeFragmentSeller">
 
-    <ScrollView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <LinearLayout
+        android:id="@+id/top_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        android:background="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/search_bar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Search Product"
+            android:layout_marginTop="5dp"
+            android:drawableStart="@drawable/search"
+            android:drawablePadding="8dp"
+            android:padding="8dp"
+            android:background="@drawable/search_bar_background"
+            android:inputType="text"
+            android:imeOptions="actionSearch"/>
+
+        <ImageView
+            android:id="@+id/icon_cart"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/addtocart"
+            android:contentDescription="Add to Cart"/>
+
+        <ImageView
+            android:id="@+id/icon_message"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="13dp"
+            android:src="@drawable/messenger"
+            android:contentDescription="Messages"/>
+    </LinearLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/top_bar"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <!-- Central Components -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
+
+                <TextView
+                    android:id="@+id/label_central_components"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Central Components"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
+
+                <TextView
+                    android:id="@+id/text_see_all_central"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
             <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/viewPager"
-                android:layout_width="0dp"
-                android:layout_height="250dp"
-                android:background="@drawable/viewpager_background"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="8dp"
-                android:elevation="4dp"
-                app:cardCornerRadius="100dp"
-                app:layout_constraintTop_toBottomOf="@id/viewPager"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tv_seller_name">
-
-                <ImageView
-                    android:id="@+id/iv_seller_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:contentDescription="@string/seller_profile_image_desc"
-                    android:src="@drawable/gear"/>
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/tv_seller_name"
-                android:layout_width="0dp"
+                android:id="@+id/viewPager_central_components"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/viewPager"
-                app:layout_constraintStart_toEndOf="@id/cv"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:background="@drawable/viewpager_background"/>
 
-            <TextView
-                android:id="@+id/tv_label_product_name"
-                android:layout_width="wrap_content"
+            <!-- Body -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Product name:"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/cv"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
 
-            <TextView
-                android:id="@+id/tv_product_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@id/cv"
-                app:layout_constraintStart_toEndOf="@id/tv_label_product_name"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                <TextView
+                    android:id="@+id/label_body"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Body"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
 
-            <TextView
-                android:id="@+id/tv_label_product_brand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Brand:"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_name"
-                app:layout_constraintStart_toStartOf="parent"/>
+                <TextView
+                    android:id="@+id/text_see_all_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_product_brand"
-                android:layout_width="0dp"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_body"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_name"
-                app:layout_constraintStart_toEndOf="@id/tv_label_product_brand"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:background="@drawable/viewpager_background"/>
 
-            <TextView
-                android:id="@+id/tv_label_product_year_model"
-                android:layout_width="wrap_content"
+            <!-- Connectors -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Year Model:"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_brand"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
 
-            <TextView
-                android:id="@+id/tv_product_year_model"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_brand"
-                app:layout_constraintStart_toEndOf="@id/tv_label_product_year_model"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                <TextView
+                    android:id="@+id/label_connectors"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Connectors"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
 
-            <TextView
-                android:id="@+id/tv_label_product_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Price:"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_year_model"
-                app:layout_constraintStart_toStartOf="parent"/>
+                <TextView
+                    android:id="@+id/text_see_all_connectors"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/tv_product_price"
-                android:layout_width="0dp"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_connectors"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_year_model"
-                app:layout_constraintStart_toEndOf="@id/tv_label_product_price"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:background="@drawable/viewpager_background"/>
 
-            <TextView
-                android:id="@+id/tv_label_product_description"
-                android:layout_width="wrap_content"
+            <!-- Peripherals -->
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Description:"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_price"
-                app:layout_constraintStart_toStartOf="parent"/>
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
 
-            <TextView
-                android:id="@+id/tv_product_description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_price"
-                app:layout_constraintStart_toEndOf="@id/tv_label_product_description"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                <TextView
+                    android:id="@+id/label_peripherals"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Peripherals"
+                    android:textSize="18sp"
+                    android:layout_weight="1"/>
 
-            <TextView
-                android:id="@+id/tv_available_quantity"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:layout_marginTop="30dp"
-                android:textColor="@android:color/holo_blue_dark"
-                app:layout_constraintTop_toBottomOf="@id/tv_product_description"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                <TextView
+                    android:id="@+id/text_see_all_peripherals"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="See All"
+                    android:textColor="@color/colorAccent"
+                    android:layout_gravity="end"/>
+            </LinearLayout>
 
-            <EditText
-                android:id="@+id/et_product_quantity"
-                android:layout_width="0dp"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager_peripherals"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter Quantity"
-                android:inputType="number"
-                android:maxLines="1"
-                android:text="1"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_available_quantity"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:background="@drawable/viewpager_background"/>
 
-            <Button
-                android:id="@+id/btn_add_review"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Add Review"
-                android:layout_marginTop="16dp"
-                android:backgroundTint="#2196F3"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/et_product_quantity"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_reviews"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/btn_add_review"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/btn_add_to_cart"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:text="Add to Cart"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="#0e5e31"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/top_bar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_checkout"
-        app:layout_constraintWidth_percent="0.5"/>
-
-    <Button
-        android:id="@+id/btn_checkout"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:text="Buy Now"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="#FF5733"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btn_add_to_cart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.5"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
