--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,22 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ChatActivity">
 
+    <!-- RecyclerView for displaying messages -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_messages"
-        android:layout_height="0dp"
-
-    <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="500dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/et_message"
+        android:padding="8dp"
+        android:clipToPadding="false" />
+
+    <!-- EditText for message input -->
+    <EditText
+        android:id="@+id/et_message"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:hint="Type a message"
+        android:layout_margin="8dp"
+        android:padding="12dp"
+        app:layout_constraintTop_toBottomOf="@id/rv_messages"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_send"
+        android:inputType="text" />
 
-        <EditText
-            android:id="@+id/et_message"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Type a message"
+    <!-- Send Button with icon -->
+    <Button
+        android:id="@+id/btn_send"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@drawable/send"
+        android:layout_margin="8dp"
+        android:contentDescription="Send message"
+        android:text="Send"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/et_message"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-            android:src="@drawable/send"
-    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
