--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,19 +6,34 @@
     android:layout_height="match_parent"
     tools:context=".ChatActivity">
 
+    <!-- TextView for sender's name at the top -->
+    <TextView
+        android:id="@+id/tv_sender_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sender Name"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <!-- RecyclerView for displaying messages -->
+
+    <!-- EditText for typing messages -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_messages"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/et_message"
+        android:clipToPadding="false"
         android:padding="8dp"
-        android:clipToPadding="false" />
+        app:layout_constraintBottom_toTopOf="@id/et_message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_sender_name" />
 
-    <!-- EditText for message input -->
     <EditText
         android:id="@+id/et_message"
         android:layout_width="0dp"
@@ -26,22 +41,25 @@
         android:hint="Type a message"
         android:layout_margin="8dp"
         android:padding="12dp"
+        android:inputType="text"
+        android:maxLines="1"
         app:layout_constraintTop_toBottomOf="@id/rv_messages"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_send"
-        android:inputType="text" />
+        app:layout_constraintEnd_toStartOf="@id/btn_send"/>
 
-    <!-- Send Button with icon -->
+    <!-- Send Button -->
     <Button
         android:id="@+id/btn_send"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:background="@drawable/send"
         android:layout_margin="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/send"
         android:contentDescription="Send message"
         android:text="Send"
         android:textColor="@android:color/white"
+        app:layout_constraintStart_toEndOf="@id/et_message"
         app:layout_constraintTop_toBottomOf="@id/et_message"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
